Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12901

Failing to create a properly sized IB queue pair

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.14.0
    • Lustre 2.13.0
    • None
    • Seen with newer Mellanox ConnectX-4 devices
    • 3
    • 9223372036854775807

      Attempting to bring up a file system in our test bed with the latest lustre version (2.13) I saw this new error on LNet bring up.

      [ 472.738363] LNet: 8481:0:(o2iblnd_cb.c:3395:kiblnd_check_conns()) Timed out tx for 10.37.248.232@o2ib1: 471 seconds
      [ 473.739295] LNetError: 2014:0:(o2iblnd.c:929:kiblnd_create_conn()) Can't create QP: -12, send_wr: 16317, recv_wr: 128, send_sge: 2, recv_sge: 1

      I found I can lower the peer_credits to get around this but that is not the proper fix.

       

       

       

       

            ssmirnov Serguei Smirnov
            simmonsja James A Simmons
            Votes:
            1 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: